--- a/enbios/demos/multiple_config_files.ipynb
+++ b/enbios/demos/multiple_config_files.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T09:55:29.889112162Z",
+     "start_time": "2024-01-19T09:55:24.820875390Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -17,15 +21,34 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project: default\n",
+      "[]\n",
+      "Project: ecoinvent_391\n",
+      "['biosphere3', 'ecoinvent_391_cutoff']\n",
+      "Project: nonlinear-method-test\n",
+      "['db']\n",
+      "Project: Spain case study\n",
+      "['biosphere', 'food']\n"
+     ]
+    }
+   ],
    "source": [
     "report()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T09:55:29.995676547Z",
+     "start_time": "2024-01-19T09:55:29.889854010Z"
+    }
    },
    "id": "ff48a157fd952cc7",
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -53,10 +76,14 @@
     "}"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T09:55:29.996913391Z",
+     "start_time": "2024-01-19T09:55:29.984740340Z"
+    }
    },
    "id": "23fb01e4a272fd72",
-   "execution_count": null
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -69,15 +96,28 @@
     "BASE_PATH = Path(BASE_TEST_DATA_PATH / \"experiment_separated/a\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T09:55:30.027108106Z",
+     "start_time": "2024-01-19T09:55:30.001954360Z"
+    }
    },
    "id": "c63a84a1b1eb812a",
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Experiment: (call info() for details)\nActivities: 4\nMethods: 2\nHierarchy (depth): 3\nScenarios: 3"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment_data = base_experiment_data | {\n",
     "    \"hierarchy\": (BASE_PATH / \"hierarchy.json\").as_posix(),\n",
@@ -87,7 +127,11 @@
     "experiment"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T09:55:30.245296704Z",
+     "start_time": "2024-01-19T09:55:30.015753292Z"
+    }
    },
    "id": "c4323efc61aaa7fe"
   },
