--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -710,7 +710,8 @@
     "    return {\n",
     "        \"name\": \"normal scenario\",\n",
     "        \"nodes\": {\n",
-    "            act: (\"kilowatt_hour\", 1) for act in hierarchy_experiment.structural_nodes_names\n",
+    "            act: (\"kilowatt_hour\", 1)\n",
+    "            for act in hierarchy_experiment.structural_nodes_names\n",
     "        },\n",
     "    }\n",
     "\n",
