--- a/enbios/demos/multiple_hierarchies.ipynb
+++ b/enbios/demos/multiple_hierarchies.ipynb
@@ -97,7 +97,9 @@
     }
    ],
    "source": [
-    "rearranged_result_tree = exp.scenarios[0].result_to_dict(alternative_hierarchy=alt_hierarchy)\n",
+    "rearranged_result_tree = exp.scenarios[0].result_to_dict(\n",
+    "    alternative_hierarchy=alt_hierarchy\n",
+    ")\n",
     "\n",
     "rearranged_result_tree[\"results\"]"
    ],
