accept lists in bw config value "enb_location"

--- a/enbios/demos/multiple_config_files.ipynb
+++ b/enbios/demos/multiple_config_files.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-19T09:55:29.889112162Z",
-     "start_time": "2024-01-19T09:55:24.820875390Z"
+     "end_time": "2024-02-14T10:45:35.536210596Z",
+     "start_time": "2024-02-14T10:45:24.265332246Z"
     }
    },
    "outputs": [],
@@ -30,10 +30,28 @@
       "[]\n",
       "Project: ecoinvent_391\n",
       "['biosphere3', 'ecoinvent_391_cutoff']\n",
+      "Project: Spain case study\n",
+      "['biosphere', 'food']\n",
+      "Project: supply chain graph\n",
+      "['bike']\n",
+      "Project: matrix-test\n",
+      "['db']\n",
       "Project: nonlinear-method-test\n",
       "['db']\n",
-      "Project: Spain case study\n",
-      "['biosphere', 'food']\n"
+      "Project: ecoinvent_391_apos\n",
+      "['biosphere3', 'ecoinvent_391_apos']\n",
+      "Project: 1\n",
+      "[]\n",
+      "Project: ecoinvent_391_consequential\n",
+      "['biosphere3', 'ecoinvent_391_consequential']\n",
+      "Project: super_simple_builder_test\n",
+      "['db']\n",
+      "Project: builder_test\n",
+      "['db']\n",
+      "Project: ppp\n",
+      "['db']\n",
+      "Project: \n",
+      "[]\n"
      ]
     }
    ],
@@ -43,8 +61,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T09:55:29.995676547Z",
-     "start_time": "2024-01-19T09:55:29.889854010Z"
+     "end_time": "2024-02-14T10:45:35.906849474Z",
+     "start_time": "2024-02-14T10:45:35.499392971Z"
     }
    },
    "id": "ff48a157fd952cc7",
@@ -78,8 +96,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-19T09:55:29.996913391Z",
-     "start_time": "2024-01-19T09:55:29.984740340Z"
+     "end_time": "2024-02-14T10:45:35.972045155Z",
+     "start_time": "2024-02-14T10:45:35.768192192Z"
     }
    },
    "id": "23fb01e4a272fd72",
