--- a/enbios/demos/bw_adapter_config.ipynb
+++ b/enbios/demos/bw_adapter_config.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "bw_test_non_linear_methods_module_path = \"/home/ra/projects/enbios/test/data/test_modules/bw_test_non_linear_methods_module.py\"\n",
+    "bw_test_non_linear_methods_module_path = (\n",
+    "    \"/home/ra/projects/enbios/test/data/test_modules/bw_test_non_linear_methods_module.py\"\n",
+    ")\n",
     "\n",
     "config_data = {\n",
     "    \"adapters\": [\n",
     "        {\n",
-    "            \"adapter_name\": 'brightway-adapter',\n",
+    "            \"adapter_name\": \"brightway-adapter\",\n",
     "            # \"module_path\": \"...\",\n",
     "            \"config\": {\n",
     "                # mandatory\n",
@@ -25,9 +27,7 @@
     "                    # select regions to include in the results\n",
     "                    \"select_regions\": [\"CAT\"],\n",
     "                    # set activities locations as included in this dict\n",
-    "                    \"set_node_regions\": {\n",
-    "                        \"<code>\": [\"ES\", \"CAT\"]\n",
-    "                    }\n",
+    "                    \"set_node_regions\": {\"<code>\": [\"ES\", \"CAT\"]},\n",
     "                },\n",
     "                # config for nonlinear characterization\n",
     "                \"nonlinear_characterization\": {\n",
@@ -35,7 +35,7 @@
     "                    \"methods\": {\n",
     "                        # name as defined in 'methods' in the adapter definition (see below)\n",
     "                        \"GWP1000\": {\n",
-    "                            # load method data and create initial linear methods. \n",
+    "                            # load method data and create initial linear methods.\n",
     "                            # will be overwritten by functions defined here\n",
     "                            \"get_defaults_from_original\": True,\n",
     "                            \"functions\": {\n",
@@ -51,12 +51,16 @@
     "                            # )\n",
     "                        }\n",
     "                    }\n",
-    "                }\n",
+    "                },\n",
     "            },\n",
     "            # the methods we want to incoperate (a dict: arbitrary name (used in results) -> bw identifier tuple\n",
     "            \"methods\": {\n",
-    "                \"GWP1000\": ['ReCiPe 2016 v1.03, midpoint (E)', 'climate change', 'global warming potential (GWP1000)']\n",
-    "            }\n",
+    "                \"GWP1000\": [\n",
+    "                    \"ReCiPe 2016 v1.03, midpoint (E)\",\n",
+    "                    \"climate change\",\n",
+    "                    \"global warming potential (GWP1000)\",\n",
+    "                ]\n",
+    "            },\n",
     "        }\n",
     "    ],\n",
     "    # each node in the hierarchy must contain the fields 'name' and 'aggregator' (non-leaf nodes) or 'adapter'\n",
@@ -74,18 +78,13 @@
     "                    \"unit\": \"kilowatt hour\",\n",
     "                    # \"code\": 'b9d74efa4fd670b1977a3471ec010737',\n",
     "                    \"location\": \"DK\",\n",
-    "                    \"default_output\": {\n",
-    "                        \"unit\": \"kWh\",\n",
-    "                        \"magnitude\": 1\n",
-    "                    }\n",
+    "                    \"default_output\": {\"unit\": \"kWh\", \"magnitude\": 1},\n",
     "                },\n",
     "            }\n",
-    "        ]\n",
+    "        ],\n",
     "    },\n",
-    "    \"config\": {\n",
-    "        \"run_adapters_concurrently\": False\n",
-    "    }\n",
-    "}\n"
+    "    \"config\": {\"run_adapters_concurrently\": False},\n",
+    "}"
    ],
    "metadata": {
     "collapsed": false,
@@ -153,7 +152,7 @@
     "from enbios.bw2.brightway_experiment_adapter import BrightwayAdapter\n",
     "from enbios.bw2.stacked_MultiLCA import StackedMultiLCA\n",
     "\n",
-    "bw_adapter: BrightwayAdapter = exp.get_adapter_by_name('brightway-adapter')\n",
+    "bw_adapter: BrightwayAdapter = exp.get_adapter_by_name(\"brightway-adapter\")\n",
     "# bw_adapter.lca_objects\n",
     "print(bw_adapter.raw_results)\n",
     "\n",
