--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -252,8 +252,16 @@
     "        \"climate change\",\n",
     "        \"global warming potential (GWP1000)\",\n",
     "    ),\n",
-    "    \"LOP\": ('ReCiPe 2016 v1.03, midpoint (E)', 'land use', 'agricultural land occupation (LOP)'),\n",
-    "    \"WCP\": ('ReCiPe 2016 v1.03, midpoint (E)', 'water use', 'water consumption potential (WCP)'),\n",
+    "    \"LOP\": (\n",
+    "        \"ReCiPe 2016 v1.03, midpoint (E)\",\n",
+    "        \"land use\",\n",
+    "        \"agricultural land occupation (LOP)\",\n",
+    "    ),\n",
+    "    \"WCP\": (\n",
+    "        \"ReCiPe 2016 v1.03, midpoint (E)\",\n",
+    "        \"water use\",\n",
+    "        \"water consumption potential (WCP)\",\n",
+    "    ),\n",
     "}"
    ],
    "metadata": {
