new feature in bw regionalization
reset unused activities locations (`clear_all_other_node_regions`), also added test

--- a/enbios/demos/bw_adapter_config.ipynb
+++ b/enbios/demos/bw_adapter_config.ipynb
@@ -28,6 +28,8 @@
     "                    \"select_regions\": [\"CAT\"],\n",
     "                    # set activities locations as included in this dict\n",
     "                    \"set_node_regions\": {\"<code>\": [\"ES\", \"CAT\"]},\n",
+    "                    # Set all activities 'enb_location' that are not in the 'hierarchy' nor 'set_node_regions'\n",
+    "                    \"clear_all_other_node_regions\": False\n",
     "                },\n",
     "                # config for nonlinear characterization\n",
     "                \"nonlinear_characterization\": {\n",
