Move demo files to root directory and update paths
The demo files have been moved out from 'enbios' directory to root level. In addition, the paths within the 'bw_adapter_config.ipynb' and 'brightway_tools.ipynb' files have also been updated to correspond to the changes. This restructuring simplifies the project navigation.

--- a/demos/bw_adapter_config.ipynb
+++ b/demos/bw_adapter_config.ipynb
@@ -5,7 +5,7 @@
    "outputs": [],
    "source": [
     "bw_test_non_linear_methods_module_path = (\n",
-    "    \"/home/ra/projects/enbios/test/data/test_modules/bw_test_non_linear_methods_module.py\"\n",
+    "    \"data/bw_test_non_linear_methods_module.py\"\n",
     ")\n",
     "\n",
     "config_data = {\n",
@@ -91,8 +91,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T12:21:32.861670835Z",
-     "start_time": "2024-02-07T12:21:32.860984665Z"
+     "end_time": "2024-02-20T11:15:29.972487723Z",
+     "start_time": "2024-02-20T11:15:29.971636363Z"
     }
    },
    "id": "b8b8855393292e65",
@@ -107,16 +107,14 @@
      "text": [
       "Excluding 0 filtered results\n",
       "Excluding 104 filtered results\n",
-      "2024-02-07 13:21:36,548 - ............enbios.demos.enbios.base - INFO - Running scenario 'default scenario'\n",
-      "2024-02-07 13:21:36,597 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 1/2\n",
-      "2024-02-07 13:21:36,789 - enbios.bw2.MultiLCA_util - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (E)', 'climate change', 'global warming potential (GWP1000)')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': 'b9d74efa4fd670b1977a3471ec010737', 'amount': 1.0}]]}\n",
-      "2024-02-07 13:21:57,469 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 2/2\n",
-      "2024-02-07 13:21:57,691 - enbios.bw2.MultiLCA_util - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (E)', 'climate change', 'global warming potential (GWP1000)')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': 'b9d74efa4fd670b1977a3471ec010737', 'amount': 1.0}]]}\n"
+      "2024-02-20 12:15:39,237 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n",
+      "2024-02-20 12:15:39,286 - ............demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 1/2\n",
+      "2024-02-20 12:16:02,015 - ............demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 2/2\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'default scenario': {'name': 'root',\n  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n    'magnitude': 0.0,\n    'multi_magnitude': [1.5704215054996038, 1.5903627507724625]}},\n  'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0},\n  'children': [{'name': 'single_activity',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'multi_magnitude': [1.5704215054996038, 1.5903627507724625]}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}}]}}"
+      "text/plain": "{'default scenario': {'name': 'root',\n  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n    'magnitude': 0.0,\n    'multi_magnitude': [1.5789588785465283, 1.5755093771663236]}},\n  'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0},\n  'children': [{'name': 'single_activity',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'multi_magnitude': [1.5789588785465283, 1.5755093771663236]}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}}]}}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -132,8 +130,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T12:22:20.865154915Z",
-     "start_time": "2024-02-07T12:21:33.446900106Z"
+     "end_time": "2024-02-20T11:16:22.104865322Z",
+     "start_time": "2024-02-20T11:15:35.963608854Z"
     }
    },
    "id": "e1c866cd74d55594",
@@ -146,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'default scenario': [array([[1.57924679]]), array([[1.57748147]])]}\n"
+      "{'default scenario': [array([[1.57895888]]), array([[1.57550938]])]}\n"
      ]
     }
    ],
@@ -163,21 +161,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T12:00:42.992521765Z",
-     "start_time": "2024-02-07T12:00:42.893022628Z"
+     "end_time": "2024-02-20T11:16:22.152067363Z",
+     "start_time": "2024-02-20T11:16:22.109126123Z"
     }
    },
    "id": "4b7ff60c2edf5ccb",
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.57924679]])"
+      "text/plain": "array([[1.57895888]])"
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,21 +186,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T12:00:47.540691558Z",
-     "start_time": "2024-02-07T12:00:47.458384787Z"
+     "end_time": "2024-02-20T11:16:22.153205251Z",
+     "start_time": "2024-02-20T11:16:22.151767202Z"
     }
    },
    "id": "26e38ebc13710817",
-   "execution_count": 16
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "[<enbios.bw2.stacked_MultiLCA.StackedMultiLCA at 0x7cf82a2d7460>,\n <enbios.bw2.stacked_MultiLCA.StackedMultiLCA at 0x7cf82b01b3a0>]"
+      "text/plain": "[<enbios.bw2.stacked_MultiLCA.StackedMultiLCA at 0x7572bb117c70>,\n <enbios.bw2.stacked_MultiLCA.StackedMultiLCA at 0x7572bb116d70>]"
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,12 +211,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T12:00:21.799499619Z",
-     "start_time": "2024-02-07T12:00:21.781670034Z"
+     "end_time": "2024-02-20T11:16:22.154168457Z",
+     "start_time": "2024-02-20T11:16:22.152045891Z"
     }
    },
    "id": "80c8ca0cdec7275f",
-   "execution_count": 14
+   "execution_count": 5
   },
   {
    "cell_type": "code",
