--- a/demos/brightway_tools.ipynb
+++ b/demos/brightway_tools.ipynb
@@ -20,14 +20,16 @@
    "source": [
     "from bw_tools.setup_project import safe_setup_ecoinvent\n",
     "\n",
-    "# this will read the ecoinvent dataset from the specified location and create a new project (name='project_name') \n",
+    "# this will read the ecoinvent dataset from the specified location and create a new project (name='project_name')\n",
     "# with data dataset imported and stored to 'db_name'\n",
     "\n",
-    "safe_setup_ecoinvent(project_name=\"my_ecoinvent_project\",\n",
-    "                     ecoinvent_db_path=\".../ecoinvent 3.9.1_cutoff_ecoSpold02/dataset\",\n",
-    "                     db_name=\"Ecoinvent_391_cutoff\",\n",
-    "                     delete_project=False,\n",
-    "                     delete_if_unlinked=True)\n"
+    "safe_setup_ecoinvent(\n",
+    "    project_name=\"my_ecoinvent_project\",\n",
+    "    ecoinvent_db_path=\".../ecoinvent 3.9.1_cutoff_ecoSpold02/dataset\",\n",
+    "    db_name=\"Ecoinvent_391_cutoff\",\n",
+    "    delete_project=False,\n",
+    "    delete_if_unlinked=True,\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
