--- a/demos/bw_adapter_config.ipynb
+++ b/demos/bw_adapter_config.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "bw_test_non_linear_methods_module_path = (\n",
-    "    \"data/bw_test_non_linear_methods_module.py\"\n",
-    ")\n",
+    "bw_test_non_linear_methods_module_path = \"data/bw_test_non_linear_methods_module.py\"\n",
     "\n",
     "config_data = {\n",
     "    \"adapters\": [\n",
@@ -29,7 +27,7 @@
     "                    # set activities locations as included in this dict\n",
     "                    \"set_node_regions\": {\"<code>\": [\"ES\", \"CAT\"]},\n",
     "                    # Set all activities 'enb_location' that are not in the 'hierarchy' nor 'set_node_regions'\n",
-    "                    \"clear_all_other_node_regions\": False\n",
+    "                    \"clear_all_other_node_regions\": False,\n",
     "                },\n",
     "                # config for nonlinear characterization\n",
     "                \"nonlinear_characterization\": {\n",
