--- a/demos/mermaid.ipynb
+++ b/demos/mermaid.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:48:15.193209465Z",
-     "start_time": "2024-02-20T11:48:15.189170255Z"
+     "end_time": "2024-02-20T22:24:12.673410485Z",
+     "start_time": "2024-02-20T22:24:09.703137549Z"
     }
    },
    "outputs": [],
@@ -21,15 +21,15 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "mermaid1=\"\"\"graph BT\n",
+    "mermaid1 = \"\"\"graph BT\n",
     "b1-->a\n",
     "b2-->a\"\"\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:47:46.706306262Z",
-     "start_time": "2024-02-20T11:47:46.700822407Z"
+     "end_time": "2024-02-20T22:20:46.792655538Z",
+     "start_time": "2024-02-20T22:20:46.755027761Z"
     }
    },
    "id": "269587c8d24261d2",
@@ -42,7 +42,7 @@
      "data": {
       "text/plain": "{'name': 'a',\n 'aggregator': None,\n 'config': None,\n 'children': [{'name': 'b1', 'adapter': None, 'config': None},\n  {'name': 'b2', 'adapter': None, 'config': None}]}"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,12 +54,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:47:50.640725179Z",
-     "start_time": "2024-02-20T11:47:50.619404403Z"
+     "end_time": "2024-02-20T22:20:46.832960816Z",
+     "start_time": "2024-02-20T22:20:46.769810599Z"
     }
    },
    "id": "145c113799d9b3ec",
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -94,12 +94,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:48:17.667354028Z",
-     "start_time": "2024-02-20T11:48:17.624777350Z"
+     "end_time": "2024-02-20T22:20:46.856185693Z",
+     "start_time": "2024-02-20T22:20:46.843058702Z"
     }
    },
    "id": "168746708c3dc0d0",
-   "execution_count": 7
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -110,12 +110,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:49:35.659288626Z",
-     "start_time": "2024-02-20T11:49:35.618681891Z"
+     "end_time": "2024-02-20T22:20:46.941429485Z",
+     "start_time": "2024-02-20T22:20:46.845367703Z"
     }
    },
    "id": "feb46984b5abadcd",
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -124,13 +124,13 @@
      "data": {
       "text/plain": "{'name': 'a',\n 'aggregator': 'sum',\n 'config': None,\n 'children': [{'name': 'b1', 'adapter': None, 'config': None},\n  {'name': 'b2', 'adapter': 'bw', 'config': None}]}"
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mermaid2=\"\"\"graph BT\n",
+    "mermaid2 = \"\"\"graph BT\n",
     "b1-->a:::sum\n",
     "b2:::bw-->a\"\"\"\n",
     "\n",
@@ -140,12 +140,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T14:03:37.071442806Z",
-     "start_time": "2024-02-20T14:03:37.027948381Z"
+     "end_time": "2024-02-20T22:20:47.018967304Z",
+     "start_time": "2024-02-20T22:20:46.887139845Z"
     }
    },
    "id": "12df5263ea771499",
-   "execution_count": 13
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -186,12 +186,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T14:04:13.359274965Z",
-     "start_time": "2024-02-20T14:04:13.318727267Z"
+     "end_time": "2024-02-20T22:20:47.022043907Z",
+     "start_time": "2024-02-20T22:20:46.947664578Z"
     }
    },
    "id": "3b46506c200f06e6",
-   "execution_count": 14
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "mermaid2=\"\"\"graph BT\n",
+    "mermaid2 = \"\"\"graph BT\n",
     "a:::sum\n",
     "b1:::bw\n",
     "b2:::bw\n",
@@ -233,12 +233,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T14:06:21.391366267Z",
-     "start_time": "2024-02-20T14:06:21.345096983Z"
+     "end_time": "2024-02-20T22:20:47.143059639Z",
+     "start_time": "2024-02-20T22:20:47.004806217Z"
     }
    },
    "id": "fb1cd79819808d2b",
-   "execution_count": 15
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "mermaid3=\"\"\"graph BT\n",
+    "mermaid3 = \"\"\"graph BT\n",
     "a:::sum\n",
     "b1:::bw,code:xxx1\n",
     "b2:::bw,code:xxx2\n",
@@ -285,21 +285,52 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T14:08:46.683705243Z",
-     "start_time": "2024-02-20T14:08:46.641192965Z"
+     "end_time": "2024-02-20T22:20:47.248286875Z",
+     "start_time": "2024-02-20T22:20:47.163732980Z"
     }
    },
    "id": "b26929ea40d599d8",
-   "execution_count": 19
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"name\": \"a\",\n",
+      "  \"aggregator\": \"sum\",\n",
+      "  \"config\": null,\n",
+      "  \"children\": [\n",
+      "    {\n",
+      "      \"name\": \"b1\",\n",
+      "      \"adapter\": null,\n",
+      "      \"config\": null\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"b2\",\n",
+      "      \"adapter\": \"bw\",\n",
+      "      \"config\": {\n",
+      "        \"code\": \"xxx2\"\n",
+      "      }\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-20T22:24:16.252204464Z",
+     "start_time": "2024-02-20T22:24:16.082984844Z"
+    }
    },
-   "id": "ca34f90835f45e9e"
+   "id": "ca34f90835f45e9e",
+   "execution_count": 2
   }
  ],
  "metadata": {
