more mermaid, formatting and update readme

--- a/demos/mermaid.ipynb
+++ b/demos/mermaid.ipynb
@@ -13,8 +13,9 @@
    },
    "outputs": [],
    "source": [
-    "from enbios.generic.mermaid2hierarchy import convert_mermaid_lines\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "from enbios.generic.mermaid2hierarchy import convert_mermaid_lines"
    ]
   },
   {
@@ -293,44 +294,118 @@
    "execution_count": 9
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## How to read a mermaid file convert it and add it to some experiment configuration"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "466259576889c6f5"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from enbios.generic.mermaid2hierarchy import convert_mermaid_file\n",
+    "\n",
+    "hierarchy = convert_mermaid_file(\"data/mermaid/simple_mermaid.mmd\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-21T13:23:35.530780504Z",
+     "start_time": "2024-02-21T13:23:34.101323162Z"
+    }
+   },
+   "id": "11c9f09bd216af6c",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from enbios.base.experiment import Experiment\n",
+    "\n",
+    "exp_config = {\n",
+    "    \"adapters\": [\n",
+    "        {\n",
+    "            \"adapter_name\": \"brightway-adapter\",\n",
+    "            \"config\": {\"bw_project\": \"ecoinvent_391\"},\n",
+    "            \"methods\": {\n",
+    "                \"GWP1000\": (\n",
+    "                    \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "                    \"climate change\",\n",
+    "                    \"global warming potential (GWP1000)\",\n",
+    "                ),\n",
+    "                \"LOP\": (\n",
+    "                    \"ReCiPe 2016 v1.03, midpoint (E)\",\n",
+    "                    \"land use\",\n",
+    "                    \"agricultural land occupation (LOP)\",\n",
+    "                ),\n",
+    "                \"WCP\": (\n",
+    "                    \"ReCiPe 2016 v1.03, midpoint (E)\",\n",
+    "                    \"water use\",\n",
+    "                    \"water consumption potential (WCP)\",\n",
+    "                ),\n",
+    "            },\n",
+    "        }\n",
+    "    ],\n",
+    "    \"hierarchy\": hierarchy,\n",
+    "}\n",
+    "\n",
+    "exp = Experiment(exp_config)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-21T13:23:53.778139134Z",
+     "start_time": "2024-02-21T13:23:49.850060951Z"
+    }
+   },
+   "id": "76e948074adecfda",
+   "execution_count": 3
+  },
+  {
    "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"name\": \"a\",\n",
-      "  \"aggregator\": \"sum\",\n",
-      "  \"config\": null,\n",
-      "  \"children\": [\n",
-      "    {\n",
-      "      \"name\": \"b1\",\n",
-      "      \"adapter\": null,\n",
-      "      \"config\": null\n",
-      "    },\n",
-      "    {\n",
-      "      \"name\": \"b2\",\n",
-      "      \"adapter\": \"bw\",\n",
-      "      \"config\": {\n",
-      "        \"code\": \"xxx2\"\n",
-      "      }\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
+      "2024-02-21 14:23:53,782 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "{'default scenario': {'name': 'root',\n  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n    'magnitude': 0.032264059590470524},\n   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.001447083969231639},\n   'WCP': {'unit': 'cubic meter', 'magnitude': 0.00032440108814901574}},\n  'output': {'unit': 'kilowatt_hour', 'magnitude': 2.0},\n  'children': [{'name': 'b1',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'magnitude': 0.015243611332791748},\n     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0010661197743596256},\n     'WCP': {'unit': 'cubic meter', 'magnitude': 0.000136359937516592}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}},\n   {'name': 'b2',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'magnitude': 0.017020448257678778},\n     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.00038096419487201346},\n     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115063242375}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}}]}}"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [],
+   "source": [
+    "exp.run()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T22:24:16.252204464Z",
-     "start_time": "2024-02-20T22:24:16.082984844Z"
+     "end_time": "2024-02-21T13:24:39.653040381Z",
+     "start_time": "2024-02-21T13:23:53.786854414Z"
     }
    },
-   "id": "ca34f90835f45e9e",
-   "execution_count": 2
+   "id": "e92285b0b4db77cb",
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b690a339f80633ff"
   }
  ],
  "metadata": {
