--- a/demos/intro.ipynb
+++ b/demos/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -18,8 +18,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:18.336951389Z",
-     "start_time": "2024-02-07T13:57:16.252756953Z"
+     "end_time": "2024-02-21T13:15:39.555114298Z",
+     "start_time": "2024-02-21T13:15:39.467657043Z"
     }
    }
   },
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:18.543217907Z",
-     "start_time": "2024-02-07T13:57:18.341608632Z"
+     "end_time": "2024-02-21T13:15:41.120805856Z",
+     "start_time": "2024-02-21T13:15:40.591185551Z"
     }
    },
    "outputs": [
@@ -73,7 +73,11 @@
       "Project: builder_test\n",
       "['db']\n",
       "Project: ppp\n",
-      "['db']\n"
+      "['db']\n",
+      "Project: \n",
+      "[]\n",
+      "Project: seed_import\n",
+      "['biosphere3', 'ecoi39co', 'batteries', 'PV', 'cobalt']\n"
      ]
     }
    ],
@@ -84,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:18.547334232Z",
-     "start_time": "2024-02-07T13:57:18.518599806Z"
+     "end_time": "2024-02-21T13:15:43.365583880Z",
+     "start_time": "2024-02-21T13:15:43.244854517Z"
     }
    },
    "outputs": [],
@@ -111,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:19.156224751Z",
-     "start_time": "2024-02-07T13:57:18.553975968Z"
+     "end_time": "2024-02-21T13:15:46.563234460Z",
+     "start_time": "2024-02-21T13:15:45.421773840Z"
     }
    },
    "outputs": [
@@ -130,7 +134,7 @@
      "data": {
       "text/plain": "['electricity production, wind, 1-3MW turbine, onshore' (kilowatt hour, ES, None),\n 'electricity production, wind, 1-3MW turbine, offshore' (kilowatt hour, ES, None)]"
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,11 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:19.295447069Z",
-     "start_time": "2024-02-07T13:57:19.155345332Z"
+     "end_time": "2024-02-21T13:15:50.430477784Z",
+     "start_time": "2024-02-21T13:15:50.353932475Z"
     }
    },
    "outputs": [],
@@ -196,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "hierarchy = {\n",
@@ -208,26 +212,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:20.685308052Z",
-     "start_time": "2024-02-07T13:57:20.571255961Z"
+     "end_time": "2024-02-21T13:21:21.571665955Z",
+     "start_time": "2024-02-21T13:21:21.418980427Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:21.358849973Z",
-     "start_time": "2024-02-07T13:57:21.274478476Z"
+     "end_time": "2024-02-21T13:21:22.768193736Z",
+     "start_time": "2024-02-21T13:21:22.641825302Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'user deprivation potential (deprivation-weighted water consumption)': ('EF v3.0 EN15804',\n  'water use',\n  'user deprivation potential (deprivation-weighted water consumption)'),\n 'materials for recycling': ('EN15804',\n  'inventory indicators ISO21930',\n  'materials for recycling')}"
+      "text/plain": "{'ecotoxicity: freshwater': ('TRACI v2.1',\n  'ecotoxicity: freshwater',\n  'ecotoxicity: freshwater'),\n 'freshwater ecotoxicity potential (FETP)': ('ReCiPe 2016 v1.03, midpoint (I)',\n  'ecotoxicity: freshwater',\n  'freshwater ecotoxicity potential (FETP)')}"
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# alternatively, we could just specify two methods\n",
@@ -267,26 +271,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:22.280626965Z",
-     "start_time": "2024-02-07T13:57:22.195851251Z"
+     "end_time": "2024-02-21T13:21:24.552787745Z",
+     "start_time": "2024-02-21T13:21:24.414111234Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:23.184192893Z",
-     "start_time": "2024-02-07T13:57:23.074322404Z"
+     "end_time": "2024-02-21T13:21:28.729301255Z",
+     "start_time": "2024-02-21T13:21:28.534056621Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'adapters': [{'adapter_name': 'brightway-adapter',\n   'config': {'bw_project': 'ecoinvent_391'},\n   'methods': {'GWP1000': ('ReCiPe 2016 v1.03, midpoint (H)',\n     'climate change',\n     'global warming potential (GWP1000)'),\n    'LOP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'land use',\n     'agricultural land occupation (LOP)'),\n    'WCP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'water use',\n     'water consumption potential (WCP)')}}],\n 'hierarchy': {'name': 'root',\n  'aggregator': 'sum-aggregator',\n  'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n    'config': {'code': 'ed3da88fc23311ee183e9ffd376de89b',\n     'default_output': {'unit': 'kilowatt_hour', 'magnitude': 3}},\n    'adapter': 'brightway-adapter'},\n   {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n    'config': {'code': '6ebfe52dc3ef5b4d35bb603b03559023'},\n    'adapter': 'brightway-adapter'}]}}"
+      "text/plain": "{'adapters': [{'adapter_name': 'brightway-adapter',\n   'config': {'bw_project': 'ecoinvent_391'},\n   'methods': {'GWP1000': ('ReCiPe 2016 v1.03, midpoint (H)',\n     'climate change',\n     'global warming potential (GWP1000)'),\n    'LOP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'land use',\n     'agricultural land occupation (LOP)'),\n    'WCP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'water use',\n     'water consumption potential (WCP)')}}],\n 'hierarchy': {'name': 'root',\n  'aggregator': 'sum-aggregator',\n  'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n    'config': {'code': 'ed3da88fc23311ee183e9ffd376de89b'},\n    'adapter': 'brightway-adapter'},\n   {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n    'config': {'code': '6ebfe52dc3ef5b4d35bb603b03559023'},\n    'adapter': 'brightway-adapter'}]}}"
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
