--- a/demos/intro.ipynb
+++ b/demos/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -11,15 +11,14 @@
     "import bw2data\n",
     "import pandas as pd\n",
     "\n",
-    "from enbios.base.experiment import Experiment\n",
-    "from enbios.bw2.util import report\n",
+    "from enbios import Experiment, report\n",
     "from enbios.models.experiment_base_models import ExperimentData"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:15:39.555114298Z",
-     "start_time": "2024-02-21T13:15:39.467657043Z"
+     "end_time": "2024-03-20T10:05:59.690116Z",
+     "start_time": "2024-03-20T10:05:49.761805Z"
     }
    }
   },
@@ -38,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:15:41.120805856Z",
-     "start_time": "2024-02-21T13:15:40.591185551Z"
+     "end_time": "2024-03-20T10:06:00.591028Z",
+     "start_time": "2024-03-20T10:06:00.441907Z"
     }
    },
    "outputs": [
@@ -77,7 +76,15 @@
       "Project: \n",
       "[]\n",
       "Project: seed_import\n",
-      "['biosphere3', 'ecoi39co', 'batteries', 'PV', 'cobalt']\n"
+      "['biosphere3', 'ecoi39co', 'batteries', 'PV', 'cobalt']\n",
+      "Project: bw_temporalis example\n",
+      "['example']\n",
+      "Project: lci-model\n",
+      "[]\n",
+      "Project: test-del\n",
+      "['db']\n",
+      "Project: lci_model\n",
+      "['biosphere3', 'cutoff391', 'new_db']\n"
      ]
     }
    ],
@@ -88,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:15:43.365583880Z",
-     "start_time": "2024-02-21T13:15:43.244854517Z"
+     "end_time": "2024-03-20T10:06:01.388039Z",
+     "start_time": "2024-03-20T10:06:01.375560Z"
     }
    },
    "outputs": [],
@@ -115,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:15:46.563234460Z",
-     "start_time": "2024-02-21T13:15:45.421773840Z"
+     "end_time": "2024-03-20T10:06:04.861840Z",
+     "start_time": "2024-03-20T10:06:02.826865Z"
     }
    },
    "outputs": [
@@ -134,7 +141,7 @@
      "data": {
       "text/plain": "['electricity production, wind, 1-3MW turbine, onshore' (kilowatt hour, ES, None),\n 'electricity production, wind, 1-3MW turbine, offshore' (kilowatt hour, ES, None)]"
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:15:50.430477784Z",
-     "start_time": "2024-02-21T13:15:50.353932475Z"
+     "end_time": "2024-03-20T10:06:04.895301Z",
+     "start_time": "2024-03-20T10:06:04.873028Z"
     }
    },
    "outputs": [],
@@ -175,8 +182,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:19.833350770Z",
-     "start_time": "2024-02-07T13:57:19.710487746Z"
+     "end_time": "2024-03-20T10:06:04.940432Z",
+     "start_time": "2024-03-20T10:06:04.903300Z"
     }
    },
    "outputs": [
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "hierarchy = {\n",
@@ -212,26 +219,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:21:21.571665955Z",
-     "start_time": "2024-02-21T13:21:21.418980427Z"
+     "end_time": "2024-03-20T10:06:04.996209Z",
+     "start_time": "2024-03-20T10:06:04.979101Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:21:22.768193736Z",
-     "start_time": "2024-02-21T13:21:22.641825302Z"
+     "end_time": "2024-03-20T10:06:05.925336Z",
+     "start_time": "2024-03-20T10:06:05.884280Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'ecotoxicity: freshwater': ('TRACI v2.1',\n  'ecotoxicity: freshwater',\n  'ecotoxicity: freshwater'),\n 'freshwater ecotoxicity potential (FETP)': ('ReCiPe 2016 v1.03, midpoint (I)',\n  'ecotoxicity: freshwater',\n  'freshwater ecotoxicity potential (FETP)')}"
+      "text/plain": "{'global warming potential (GWP20) no LT': ('IPCC 2021 no LT',\n  'climate change: fossil, including SLCFs no LT',\n  'global warming potential (GWP20) no LT'),\n 'marine eutrophication potential (MEP) no LT': ('ReCiPe 2016 v1.03, midpoint (E) no LT',\n  'eutrophication: marine no LT',\n  'marine eutrophication potential (MEP) no LT')}"
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# alternatively, we could just specify two methods\n",
@@ -271,26 +278,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:21:24.552787745Z",
-     "start_time": "2024-02-21T13:21:24.414111234Z"
+     "end_time": "2024-03-20T10:06:06.263487Z",
+     "start_time": "2024-03-20T10:06:06.237572Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:21:28.729301255Z",
-     "start_time": "2024-02-21T13:21:28.534056621Z"
+     "end_time": "2024-03-20T10:06:07.452665Z",
+     "start_time": "2024-03-20T10:06:07.389977Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'adapters': [{'adapter_name': 'brightway-adapter',\n   'config': {'bw_project': 'ecoinvent_391'},\n   'methods': {'GWP1000': ('ReCiPe 2016 v1.03, midpoint (H)',\n     'climate change',\n     'global warming potential (GWP1000)'),\n    'LOP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'land use',\n     'agricultural land occupation (LOP)'),\n    'WCP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'water use',\n     'water consumption potential (WCP)')}}],\n 'hierarchy': {'name': 'root',\n  'aggregator': 'sum-aggregator',\n  'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n    'config': {'code': 'ed3da88fc23311ee183e9ffd376de89b'},\n    'adapter': 'brightway-adapter'},\n   {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n    'config': {'code': '6ebfe52dc3ef5b4d35bb603b03559023'},\n    'adapter': 'brightway-adapter'}]}}"
+      "text/plain": "{'adapters': [{'adapter_name': 'brightway-adapter',\n   'config': {'bw_project': 'ecoinvent_391'},\n   'methods': {'GWP1000': ('ReCiPe 2016 v1.03, midpoint (H)',\n     'climate change',\n     'global warming potential (GWP1000)'),\n    'LOP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'land use',\n     'agricultural land occupation (LOP)'),\n    'WCP': ('ReCiPe 2016 v1.03, midpoint (E)',\n     'water use',\n     'water consumption potential (WCP)')}}],\n 'hierarchy': {'name': 'root',\n  'aggregator': 'sum-aggregator',\n  'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n    'config': {'code': 'ed3da88fc23311ee183e9ffd376de89b',\n     'default_output': {'unit': 'kilowatt_hour', 'magnitude': 3}},\n    'adapter': 'brightway-adapter'},\n   {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n    'config': {'code': '6ebfe52dc3ef5b4d35bb603b03559023'},\n    'adapter': 'brightway-adapter'}]}}"
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,8 +325,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:25.630986030Z",
-     "start_time": "2024-02-07T13:57:23.894972227Z"
+     "end_time": "2024-03-20T10:06:15.477473Z",
+     "start_time": "2024-03-20T10:06:08.519363Z"
     }
    },
    "outputs": [],
@@ -333,8 +340,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:57:25.714895505Z",
-     "start_time": "2024-02-07T13:57:25.635347896Z"
+     "end_time": "2024-03-20T10:06:15.506109Z",
+     "start_time": "2024-03-20T10:06:15.484323Z"
     }
    },
    "outputs": [
@@ -372,8 +379,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-07T13:58:19.704212265Z",
-     "start_time": "2024-02-07T13:57:26.900962419Z"
+     "end_time": "2024-03-20T10:07:34.568106Z",
+     "start_time": "2024-03-20T10:06:15.511938Z"
     }
    },
    "outputs": [
@@ -381,8 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-02-07 14:57:26,897 - ............enbios.demos.enbios.base - INFO - Running scenario 'default scenario'\n",
-      "2024-02-07 14:57:26,905 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 1/1\n"
+      "2024-03-20 11:06:15,531 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
     }
    ],
