test pre-commit hook

--- a/demos/simple_assignment_demo.ipynb
+++ b/demos/simple_assignment_demo.ipynb
@@ -39,26 +39,23 @@
     "    # the config of a assign node needs either: default_impacts or scenario_data.impacts\n",
     "    \"config\": {\n",
     "        \"output_units\": [\"l\"],\n",
-    "        \"default_impacts\": {\n",
-    "            \"co2\": {\"unit\": \"kg\", \"magnitude\": 10}\n",
-    "        }}\n",
+    "        \"default_impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 10}},\n",
+    "    },\n",
     "}\n",
     "\n",
     "experiment_data = {\n",
-    "    \"adapters\": [{\n",
-    "        \"adapter_name\": \"simple-assignment-adapter\",\n",
-    "        # by default this adapter does no specific config\n",
-    "        \"methods\": {\n",
-    "            \"co2\": \"kg\"\n",
+    "    \"adapters\": [\n",
+    "        {\n",
+    "            \"adapter_name\": \"simple-assignment-adapter\",\n",
+    "            # by default this adapter does no specific config\n",
+    "            \"methods\": {\"co2\": \"kg\"},\n",
     "        }\n",
-    "    }],\n",
+    "    ],\n",
     "    \"hierarchy\": {\n",
     "        \"name\": \"root\",\n",
     "        \"aggregator\": \"sum\",\n",
-    "        \"children\": [\n",
-    "            simple_assignment_node\n",
-    "        ]\n",
-    "    }\n",
+    "        \"children\": [simple_assignment_node],\n",
+    "    },\n",
     "}"
    ],
    "metadata": {
@@ -124,19 +121,16 @@
     }
    ],
    "source": [
-    "experiment_data[\"scenarios\"] = [{\n",
-    "    \"name\": \"scenario1\",\n",
-    "    \"nodes\": {\n",
-    "        \"simple_ass\": {\n",
-    "            \"outputs\": [{\n",
-    "                \"unit\": \"l\", \"magnitude\": 100\n",
-    "            }],\n",
-    "            \"impacts\": {\n",
-    "                \"co2\": {\"unit\": \"pf\", \"magnitude\": 20}\n",
+    "experiment_data[\"scenarios\"] = [\n",
+    "    {\n",
+    "        \"name\": \"scenario1\",\n",
+    "        \"nodes\": {\n",
+    "            \"simple_ass\": {\n",
+    "                \"outputs\": [{\"unit\": \"l\", \"magnitude\": 100}],\n",
+    "                \"impacts\": {\"co2\": {\"unit\": \"pf\", \"magnitude\": 20}},\n",
     "            }\n",
-    "        }\n",
+    "        },\n",
     "    }\n",
-    "}\n",
     "]\n",
     "\n",
     "experiment = Experiment(experiment_data)\n",
