--- a/demos/intro.ipynb
+++ b/demos/intro.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "\n",
     "from enbios import Experiment, report\n",
-    "from enbios.models.experiment_base_models import ExperimentData"
+    "from enbios.models.models import ExperimentData"
    ],
    "metadata": {
     "collapsed": false,
